# malaysia-data-platform

./: .gitignore  .sqlfluff  README.md  pyproject.toml
.dlt/: config.toml
.github/ci-profiles/: profiles.yml
.github/workflows/: ci.yml
dbt/: dbt_project.yml
dbt/models/marts/: _marts.yml  dim_fuel_type.sql  fct_cpi.sql  fct_fuel_prices.sql  fct_ridership.sql  mart_fuel_cpi_monthly.sql
dbt/models/staging/: _sources.yml  _staging.yml  stg_cpi_2d.sql  stg_fuelprice.sql  stg_ridership.sql
dbt/seeds/: dim_cpi_division.csv
dbt/tests/: assert_no_future_prices.sql
ingest/: run.py  sources.py
